--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   <link rel="shortcut icon" href="/assets/favicon.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="container">
         <div class="drop-zone">
             <span class="drop-zone__prompt">Deposer un ficher(svg)/clicker pour telecharger</span>
             <input type="file" name="myFile" class="drop-zone__input">
         </div>
+        <div class="final_result">
+        </div>
     </div>
-       
-    
-
   <script src="script.js"></script>
 </body>
